deployments/base/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: justice-redact-frontend
  namespace: ${NAMESPACE}
spec:
  replicas: 2
  selector:
    matchLabels:
      app: justice-redact-frontend
  template:
    metadata:
      labels:
        app: justice-redact-frontend
    spec:
      serviceAccountName: ${SERVICE_ACCOUNT}
      containers:
        - name: app
          image: justice-redact-frontend-image:latest
          ports:
            - containerPort: 3000
